// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`genRoutesConfig website with no docs/pages 1`] = `
"import React from 'react';
import Loadable from 'react-loadable';
import Loading from '@theme/Loading';
import Docs from '@theme/Docs';
import NotFound from '@theme/NotFound';
const routes = [,,
  {
    path: '*',
    component: NotFound
  }
];
export default routes;
"
`;

exports[`genRoutesConfig website with only docs 1`] = `
"import React from 'react';
import Loadable from 'react-loadable';
import Loading from '@theme/Loading';
import Docs from '@theme/Docs';
import NotFound from '@theme/NotFound';
const routes = [
  {
    path: \\"/hello\\",
    exact: true,
    component: Loadable({
      loader: () => import('@docs/hello.md'),
      loading: Loading,
      render(loaded, props) {
        let Content = loaded.default;
        return <Docs {...props}><Content /></Docs>;
      }
    })
  },
  {
    path: \\"/foo/baz\\",
    exact: true,
    component: Loadable({
      loader: () => import('@docs/foo/baz.md'),
      loading: Loading,
      render(loaded, props) {
        let Content = loaded.default;
        return <Docs {...props}><Content /></Docs>;
      }
    })
  },
  {
    path: \\"/foo/bar\\",
    exact: true,
    component: Loadable({
      loader: () => import('@docs/foo/bar.md'),
      loading: Loading,
      render(loaded, props) {
        let Content = loaded.default;
        return <Docs {...props}><Content /></Docs>;
      }
    })
  },,
  {
    path: '*',
    component: NotFound
  }
];
export default routes;
"
`;

exports[`genRoutesConfig website with only pages 1`] = `
"import React from 'react';
import Loadable from 'react-loadable';
import Loading from '@theme/Loading';
import Docs from '@theme/Docs';
import NotFound from '@theme/NotFound';
const routes = [,
  {
    path: \\"/foo\\",
    exact: true,
    component: Loadable({
      loader: () => import('@pages/foo.js'),
      loading: Loading
    })
  },
  {
    path: \\"/\\",
    exact: true,
    component: Loadable({
      loader: () => import('@pages/index.js'),
      loading: Loading
    })
  },
  {
    path: \\"/bar/baz\\",
    exact: true,
    component: Loadable({
      loader: () => import('@pages/bar/baz.js'),
      loading: Loading
    })
  },
  {
    path: \\"/foo/\\",
    exact: true,
    component: Loadable({
      loader: () => import('@pages/foo/index.js'),
      loading: Loading
    })
  },
  {
    path: '*',
    component: NotFound
  }
];
export default routes;
"
`;

exports[`genRoutesConfig website with pages and docs 1`] = `
"import React from 'react';
import Loadable from 'react-loadable';
import Loading from '@theme/Loading';
import Docs from '@theme/Docs';
import NotFound from '@theme/NotFound';
const routes = [
  {
    path: \\"/hello\\",
    exact: true,
    component: Loadable({
      loader: () => import('@docs/hello.md'),
      loading: Loading,
      render(loaded, props) {
        let Content = loaded.default;
        return <Docs {...props}><Content /></Docs>;
      }
    })
  },
  {
    path: \\"/foo/bar\\",
    exact: true,
    component: Loadable({
      loader: () => import('@docs/foo/bar.md'),
      loading: Loading,
      render(loaded, props) {
        let Content = loaded.default;
        return <Docs {...props}><Content /></Docs>;
      }
    })
  },
  {
    path: \\"/foo/baz\\",
    exact: true,
    component: Loadable({
      loader: () => import('@docs/foo/baz.md'),
      loading: Loading,
      render(loaded, props) {
        let Content = loaded.default;
        return <Docs {...props}><Content /></Docs>;
      }
    })
  },
  {
    path: \\"/\\",
    exact: true,
    component: Loadable({
      loader: () => import('@pages/index.js'),
      loading: Loading
    })
  },
  {
    path: \\"/foo\\",
    exact: true,
    component: Loadable({
      loader: () => import('@pages/foo.js'),
      loading: Loading
    })
  },
  {
    path: \\"/foo/\\",
    exact: true,
    component: Loadable({
      loader: () => import('@pages/foo/index.js'),
      loading: Loading
    })
  },
  {
    path: \\"/bar/baz\\",
    exact: true,
    component: Loadable({
      loader: () => import('@pages/bar/baz.js'),
      loading: Loading
    })
  },
  {
    path: '*',
    component: NotFound
  }
];
export default routes;
"
`;
